fixed more visibility issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -108,6 +108,8 @@ body {
 }
 
 select,
-option {
+option,
+input,
+textarea {
   @apply text-gray-700;
 }
